
plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

description = 'M4'

application {
    mainClass = 'CINEMARX.M4.M4'
    applicationDefaultJvmArgs = [
        "--enable-native-access=javafx.graphics,javafx.media,javafx.web",
        "--add-opens=javafx.web/com.sun.webkit=ALL-UNNAMED"
    ]
}

repositories {
    mavenCentral()
}

javafx {
    version = "21" // Cambiado a versi├│n 21 para consistencia
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media', 'javafx.web' ] // Agregado javafx.web
}

dependencies {
    implementation files('../M4/libs/mariadb-java-client-3.5.6.jar')
    implementation 'jakarta.mail:jakarta.mail-api:2.1.2'
    implementation 'org.eclipse.angus:angus-mail:2.0.2'
    implementation 'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'
    // No necesitas declarar JavaFX manualmente porque el plugin lo maneja
    implementation 'com.google.zxing:core:3.5.2'
    implementation 'com.google.zxing:javase:3.5.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}
